<resources>
    <string name="app_name">QQ</string>
    <string name="send_text">发送文本</string>
    <string name="send_video">发送语音</string>
    <string name="send_audio">语音通话</string>
    <string name="call_video">视频通话</string>
    <string name="tip_account">请输入账号</string>
    <string name="tip_password">请输入密码</string>
    <string name="signIn">登录</string>
    <string name="signUp">注册</string>
    <string name="input_name">请输入接收端</string>
    <string name="input_msg">请输入要发送的内容</string>
    <string name="get_users">获取好友列表</string>
</resources>