<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">

    <EditText
        android:id="@+id/name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/rounded_edit"
        android:gravity="center"
        android:hint="@string/input_name"
        android:inputType="text"
        android:textSize="20sp" />

    <Button
        android:id="@+id/send_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_text" />

    <Button
        android:id="@+id/send_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_video" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/send_audio"
        android:text="@string/send_audio"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/call_video"
        android:text="@string/call_video"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/main_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>